random-fail/envoycfg.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream
          http_filters:
          - name: envoy.filters.http.wasm
            config:
              config:
                name: "auth"
                root_id: "auth"
                configuration: "auth_service"
                vm_config:
                  vm_id: "my_vm_id"
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: build/optimized.wasm
          - name: envoy.router
            config: {}
  - name: auth_service
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8099
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/get"
                direct_response:
                  status: 200
                  body:
                    inline_string: "ok!\n"
              - match:
                  prefix: "/"
                direct_response:
                  status: 403
                  body:
                    inline_string: "not authorized!\n"
          http_filters:
          - name: envoy.router
            config: {}
  - name: upstream
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 9090
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/ok"
                direct_response:
                  status: 200
                  body:
                    inline_string: "hello world!\n"
          http_filters:
          - name: envoy.router
            config: {}

  clusters:
  - name: auth_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8099
  - name: upstream
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: postman-echo.com
        port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
